--- a/src/ui/ui.html
+++ b/src/ui/ui.html
@@ -163,9 +163,11 @@
                 if (message.hasValidSelection) {
                     gridContainer.style.display = 'flex';
                     messageContainer.style.display = 'none';
+                    alignmentGrid.focus(); // Focus when a valid autolayout element is selected
                 } else {
                     gridContainer.style.display = 'none';
                     messageContainer.style.display = 'block'; // Or 'flex' if you want to use flex properties for centering message
+                    alignmentGrid.blur(); // Blur when no valid autolayout element is selected
                 }
             }
         };
