Support "hug" and "fill" as values in height / width input

--- a/src/ui/input-dialog.html
+++ b/src/ui/input-dialog.html
@@ -100,22 +100,34 @@
         inputField.addEventListener('keydown', (event) => {
             if (event.key === 'Enter') {
                 event.preventDefault();
-                let valueToSubmit = inputField.value;
-                if (numericPropertyTypes.includes(currentPropertyType)) {
-                    // If the input contains '%', send it raw for backend processing.
-                    // Otherwise, try to evaluate it as a mathematical expression.
-                    if (inputField.value.includes('%') && (currentPropertyType === 'setWidth' || currentPropertyType === 'setHeight')) {
-                        valueToSubmit = inputField.value; // Send raw string for width/height with %
+                let valueToSubmit = inputField.value.trim(); // Trim the input value upfront
+                const lowerValue = valueToSubmit.toLowerCase(); // Use lowercase for "fill"/"hug" comparison
+
+                if (currentPropertyType === 'setWidth' || currentPropertyType === 'setHeight') {
+                    if (lowerValue === 'fill' || lowerValue === 'hug') {
+                        valueToSubmit = lowerValue; // Submit "fill" or "hug"
+                    } else if (valueToSubmit.includes('%')) {
+                        // Percentage value, valueToSubmit is already correct (original trimmed input)
                     } else {
-                        const evaluatedValue = evaluateMathematicalExpression(inputField.value);
+                        // Try to evaluate as a mathematical expression
+                        const evaluatedValue = evaluateMathematicalExpression(valueToSubmit);
                         if (evaluatedValue !== null && typeof evaluatedValue === 'number') {
                             valueToSubmit = String(evaluatedValue);
                         }
-                        // If evaluation returns null (error or not a math expression that doesn't contain '%'),
-                        // we'll submit the original inputField.value,
-                        // and let the plugin's parseFloat handle it.
+                        // If not "fill", "hug", "%", or a valid math expression,
+                        // valueToSubmit remains the original trimmed input.
+                        // The backend (code.ts) will handle parsing this.
                     }
+                } else if (numericPropertyTypes.includes(currentPropertyType)) {
+                    // For other numeric types (e.g., padding, gap, border radius)
+                    const evaluatedValue = evaluateMathematicalExpression(valueToSubmit);
+                    if (evaluatedValue !== null && typeof evaluatedValue === 'number') {
+                        valueToSubmit = String(evaluatedValue);
+                    }
+                    // If not a valid math expression, valueToSubmit remains the original trimmed input.
                 }
+                // For non-numeric types, or if no specific handling matched,
+                // valueToSubmit is the original trimmed input.
                 parent.postMessage({
                     pluginMessage: {
                         type: 'submit-value',
