Adjust commands to unblock more accurate alternative fuzzy search matches

--- a/src/ui/help-dialog.html
+++ b/src/ui/help-dialog.html
@@ -135,7 +135,7 @@
             <div class="category">
                 <h2>Text</h2>
                 <ul>
-                    <li><code>ls..</code> - Set Text Letter Spacing (prompts for custom value)</li>
+                    <li><code>ls..</code> - Set Letter Spacing (prompts for custom value)</li>
                     <li><code>t.s</code> - Set Text Size (prompts for custom value)</li>
                 </ul>
             </div>
