--- a/src/ui/help-dialog.html
+++ b/src/ui/help-dialog.html
@@ -67,7 +67,7 @@
         }
     </style>
 </head>
-<body>  
+<body> 
     <div class="content-area" tabindex="0"> <!-- Make content area focusable for keyboard events -->
         <div class="column">
             <div class="category">
@@ -127,6 +127,7 @@
                 <h2>Fill</h2>
                 <ul>
                     <li><code>f.w</code> - Add White Fill</li>
+                    <li><code>f.b</code> - Add Black Fill</li>
                     <li><code>f.0</code> - Remove All Fills</li>
                     <li><code>f..</code> - Set Fill Colour (prompts for custom value)</li>
                 </ul>
