Add new padding controls

--- a/src/ui/help-dialog.html
+++ b/src/ui/help-dialog.html
@@ -88,6 +88,12 @@
                     <li><code>p.0</code> - Set All Padding to 0</li>
                     <li><code>p.16</code> - Set All Padding to 16</li>
                     <li><code>p..</code> - Set Padding (prompts for custom value)</li>
+                    <li><code>ptop..</code> - Set Top Padding</li>
+                    <li><code>pleft..</code> - Set Left Padding</li>
+                    <li><code>pright..</code> - Set Right Padding</li>
+                    <li><code>pbott..</code> - Set Bottom Padding</li>
+                    <li><code>phor..</code> - Set Horizontal Padding</li>
+                    <li><code>pvert..</code> - Set Vertical Padding</li>
                 </ul>
             </div>
             <div class="category">
